# air_hockey

./: CMakeLists.txt  Pruebas_y_Verificacion.txt  README.md  package.xml
launch/: Comandos  air_hockey.launch  arduino.launch
msg/: hockey_pose.msg
scripts/: vision.py  vision_moderno.py  vision_previo.py
src/: gestor.cpp  gestor_antiguo.cpp  gestor_es.cpp  gestor_es_antiguo.cpp  planificador.cpp  planificador_antiguo.cpp  prediccion.cpp  prediccion_actual.cpp  prediccion_previo.cpp
srv/: moveHomeMotors.srv  todoOK.srv
